# Karakuri

./: .gitignore  CMakeLists.txt  Karakuri.sln  LICENCE  README.md
Karakuri/: Karakuri.vcxproj  Karakuri.vcxproj.filters
Karakuri.Sandbox/: Karakuri.Sandbox.vcxproj  Karakuri.Sandbox.vcxproj.filters
Karakuri.Sandbox/shaders/: sprite.frag  sprite.vert
Karakuri.Sandbox/src/: GameSandbox.cpp  GameSandbox.h  game_sandbox.cpp  game_sandbox.h  main.cpp
Karakuri.Sandbox/x64/Debug/: Karakuri.Sandbox.exe.recipe  Karakuri.Sandbox.ilk  vc143.idb
Karakuri.Sandbox/x64/Debug/Karakuri.Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Karakuri.Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Karakuri/include/: Game.h  GraphicsDevice.h  buttons.h  circle.h  colour.h  gamepad.h  graphics_device.h  keyboard.h  keys.h  matrix.h  mouse.h  rectangle.h  sprite_renderer.h  texture.h  vector2.h  vector3.h
Karakuri/include/glm/detail/: glm.cpp
Karakuri/includes/glad/: glad.h
Karakuri/shaders/: sprite.vert
Karakuri/src/: API.h  Game.cpp  Game.h  GraphicsDevice.cpp  circle.cpp  collision.cpp  collision.h  colour.cpp  gamepad.cpp  glad.c  graphics_device.cpp  keyboard.cpp  mouse.cpp  rectangle.cpp  shader.cpp  shader.h  sprite_renderer.cpp  texture.cpp
Karakuri/x64/Debug/: Karakuri.dll.recipe  Karakuri.ilk  vc143.idb
Karakuri/x64/Debug/Karakuri.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
dependencies/: CMakeLists.txt
include/: animation_data.h  animation_player.h  aseprite.h  buttons.h  cell_data.h  circle.h  collision.h  colour.h  combo_listener.h  controller_combo.h  frame_data.h  game.h  gamepad.h  glad.h  graphics_device.h  karakuri.h  keyboard.h  keyboard_combo.h  keys.h  math_helper.h  math_utility.h  matrix.h  mouse.h  rectangle.h  rectangle_renderer.h  renderer.h  shader.h  song.h  sound_effect.h  sprite_mirror.h  sprite_renderer.h  texture.h  timer.cpp  timer.h  update_component.h  update_manager.h  vector2.h  vector3.h
shaders/: sprite.frag
src/: animation_data.cpp  animation_player.cpp  aseprite.cpp  cell_data.cpp  circle.cpp  collision.cpp  collision.h  colour.cpp  combo_listener.cpp  controller_combo.cpp  frame_data.cpp  game.cpp  gamepad.cpp  glad.c  graphics_device.cpp  keyboard.cpp  keyboard_combo.cpp  mouse.cpp  rectangle.cpp  rectangle_renderer.cpp  renderer.cpp  shader.cpp  shader.h  song.cpp  sound_effect.cpp  sprite_renderer.cpp  texture.cpp  timer.cpp  update_manager.cpp
visualc/: Karakuri.sln  Karakuri.vcxproj  Karakuri.vcxproj.filters
x64/Debug/: Karakuri.exp  Karakuri.lib
